data/derived/comb/progs/unify/prog1483.ml.out
Characters 164-165:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type int list * 'a -> int -> int * 'b list
       but an expression was expected of type
         int list * 'a -> int -> int list * 'a
       Type int is not compatible with type int list 
